RESOLVED FIXED148553
Video full-screen shouldn't use the DynamicSizeWithMinimumViewSize layout mode
https://bugs.webkit.org/show_bug.cgi?id=148553
Summary Video full-screen shouldn't use the DynamicSizeWithMinimumViewSize layout mode
Tim Horton
Reported 2015-08-27 18:36:47 PDT
Video full-screen shouldn't use the DynamicSizeWithMinimumViewSize layout mode
Attachments
Patch (5.58 KB, patch)
2015-08-27 18:37 PDT, Tim Horton
zalan: review+
Tim Horton
Comment 1 2015-08-27 18:37:02 PDT
Tim Horton
Comment 2 2015-08-27 19:12:43 PDT
Radar WebKit Bug Importer
Comment 3 2015-08-27 22:44:41 PDT
Note You need to log in before you can comment on or make changes to this bug.