Source/WebKit2/UIProcess/mac/WKFullScreenWindowController.mm
@@ -301,8 +301,6 @@ static const float minVideoWidth = 480 + 20 + 20; // Note: Keep in sync with med
         [_webViewPlaceholder setExitWarningVisible:YES];
         [_webViewPlaceholder setTarget:self];
 
-        [_webView _setLayoutMode:kWKLayoutModeDynamicSizeWithMinimumViewSize];
-        
         NSSize minContentSize = self.window.contentMinSize;
         minContentSize.width = minVideoWidth;
         self.window.contentMinSize = minContentSize;
@@ -392,7 +390,6 @@ static const float minVideoWidth = 480 + 20 + 20; // Note: Keep in sync with med
     makeResponderFirstResponderIfDescendantOfView(_webView.window, firstResponder, _webView);
 
     [[_webView window] makeKeyAndOrderFront:self];
-    [_webView _setLayoutMode:kWKLayoutModeViewSize];
 
     // These messages must be sent after the swap or flashing will occur during forceRepaint:
     [self _manager]->didExitFullScreen();
